<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.david.musicalstructure.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/button_tracks"
            style="@style/ImageView"
            android:src="@drawable/tracksbutton"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/button_albums"
            style="@style/ImageView"
            android:src="@drawable/albumsbutton"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/button_playlist"
            style="@style/ImageView"
            android:src="@drawable/playlistbutton"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/button_payment"
            style="@style/ImageView"
            android:src="@drawable/paymentbutton"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4">

        <ImageView
            android:id="@+id/album_art"
            style="@style/AlbumArt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/albumart"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6">

        <TextView
            android:id="@+id/song_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/song"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

        <TextView
            android:id="@+id/artist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artist"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/song_name" />

        <TextView
            android:id="@+id/time_elapsed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_elapsed"
            app:layout_constraintBottom_toBottomOf="@+id/progress_bar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/progress_bar" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/button_play"
            app:layout_constraintLeft_toLeftOf="@+id/button_previous"
            app:layout_constraintRight_toRightOf="@+id/button_next"
            app:layout_constraintTop_toBottomOf="@+id/artist_name" />

        <TextView
            android:id="@+id/time_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_total"
            app:layout_constraintBottom_toBottomOf="@+id/progress_bar"
            app:layout_constraintLeft_toRightOf="@+id/progress_bar"
            app:layout_constraintRight_toRightOf="parent" />

        <ImageView
            android:id="@+id/button_shuffle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/shufflebutton"
            app:layout_constraintBottom_toBottomOf="@+id/button_previous"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/button_previous"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/button_previous"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/previousbutton"
            app:layout_constraintBottom_toBottomOf="@+id/button_play"
            app:layout_constraintRight_toLeftOf="@+id/button_play"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/button_play"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/playbutton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/artist_name"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/button_next"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="8dp"
            android:src="@drawable/nextbutton"
            app:layout_constraintBottom_toBottomOf="@+id/button_play"
            app:layout_constraintLeft_toRightOf="@+id/button_play"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/button_repeat"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/repeatbutton"
            app:layout_constraintBottom_toBottomOf="@+id/button_next"
            app:layout_constraintLeft_toRightOf="@+id/button_next"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/playlist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playlist"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_play" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>
